force-app/main/default/objects/Knowledge_Articles__c/Knowledge_Articles__c.object-meta.xml
<CustomObject>
    <label>Knowledge Article</label>
    <nameField>
        <label>Knowledge Article Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Knowledge Article</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>