force-app/main/default/objects/Knowledge_Articles__c/fields/hreflink__c.field-meta.xml
<CustomField>
    <fullName>hreflink__c</fullName>
    <formula>&quot;#&quot; + TEXT(Question_No__c)</formula>
    <label>hreflink</label>
    <type>Text</type>
</CustomField>