force-app/main/default/objects/Knowledge_Articles__c/fields/Question_No__c.field-meta.xml
<CustomField>
    <fullName>Question_No__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Question No</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>