force-app/main/default/objects/Knowledge_Articles__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Question_No__c</columns>
    <columns>Question_Text__c</columns>
    <columns>Answer__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>